chore: remove jwt (#1)
